<resources>

    <string name="app_name">Pets Shelter</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--Menu -->
    <string name="action_settings">Settings</string>
    <string name="main_menu_fragment_title">Home</string>
    <string name="dogs_fragment_title">Dogs</string>
    <string name="cats_fragment_title">Cats</string>
    <string name="shelter_fragment_title">Shelter</string>
    <string name="news_fragment_title">News</string>

    <!--Pet details -->
    <string name="age">Age:</string>
    <string name="breed">Breed:</string>
    <string name="shelter">Shelter:</string>
    <string name="gender">Gender:</string>
    <string name="shelter_info_title">Shelter Info</string>
    <string name="button_food_text">Buy food</string>
    <string name="adoption_button_text">Adoption</string>
    <string name="adopted">Adopted!</string>
    <string name="looking_for_home">Looking for home</string>

    <!--Shelter Info -->
    <string name="address">Address:</string>
    <string name="country">Country:</string>
    <string name="open_map">map</string>
    <string name="phone">Phone:</string>
    <string name="web">Website:</string>
    <string name="email">Email:</string>
    <string name="adoption_hours">Adoption Hours:</string>
    <string name="become_volunteer">Become volunteer</string>
    <string name="donate">Donate</string>
    <string name="title_activity_maps">Map</string>

    <!-- Firebase Auth -->
    <string name="sign_in_cancelled">Sign in cancelled</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="sign_in_unknown_error">Sign in unknown error</string>
    <string name="sign_in_failed">Sign in failed</string>
    <string name="sign_in_successful">Sign in successful</string>
    <string name="signed_out">Signed out</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_in">Sign In</string>

    <!--Donation -->
    <string name="donation">Donation</string>
    <string name="donation_text">Any help is vital to help these animals survive and find their own home.</string>
    <string name="invalid_card">Invalid Card Data</string>
    <string name="choose_amount">Choose an amount of your donation</string>
    <string name="your_choice">Your Choice, $</string>
    <string name="enter_amount">Enter amount</string>

    <string name="error">Error</string>
    <string name="card_not_valid">Card is not valid</string>
    <string name="wrong_amount_format">Wrong amount format</string>

    <string name="amount_donation">Amount of your donation (CAD)</string>
    <string name="minimum_donation">The minimum donation is $1</string>
    <string name="card_information">Credit card information</string>
    <string name="apply">Apply</string>
    <string name="donate_with_card">Donate with Card</string>

    <string name="summary">SUMMARY</string>
    <string name="card_number">Card number</string>
    <string name="from">From</string>
    <string name="for_title">For</string>
    <string name="donation_successful">Donation successful. Thank you for your help!</string>
    <string name="service_unavailable">Service is temporarily unavailable, please try again later.</string>
    <string name="donation_failed">We\'re sorry, your donation failed to process. Please try again later or contact us.</string>

    <!--Loading messages -->
    <string name="donation_processing">Donation processing…</string>
    <string name="card_validation">Card validation…</string>
    <string name="anonymous">Anonymous</string>
    <string name="cancelled">Cancelled</string>
    <string name="google_pay_not_available">Google Pay not available</string>
    <string name="set_up_payment_methods">Setting up payment methods…</string>
    <string name="unidentified_error">Oops something went wrong, please try again.</string>
    <string name="connecting_to_google_pay">Connecting to Google Pay…</string>

    <!--News -->
    <string name="image_credits">Image credits:</string>
    <string name="article">Article</string>
    <string name="comment">Comment</string>

    <!--Adoption -->
    <string name="adoption_service">Adoption Service</string>
    <string name="adoption_conditions_title">Before adopting, it is important to:</string>
    <string name="adoption_hours_2">Adoption hours:</string>
    <string name="adoption_fees">Adoption fees:</string>
    <string name="adoption">Adoption</string>

    <!--Splash -->
    <string name="updating">Updating…</string>
    <string name="add_comment">Add a public comment…</string>


</resources>
