<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_subject_24dp"
            android:title="@string/news_fragment_title"/>
        <item
            android:id="@+id/nav_dogs"
            android:icon="@drawable/ic_pets_24dp"
            android:title="@string/dogs_fragment_title"/>
        <item
            android:id="@+id/nav_cats"
            android:icon="@drawable/ic_pets_24dp"
            android:title="@string/cats_fragment_title"/>
        <item
            android:id="@+id/nav_shelter"
            android:icon="@drawable/ic_location_city_24dp"
            android:title="@string/shelter_fragment_title"/>
        <item
            android:id="@+id/nav_adoption"
            android:icon="@drawable/ic_assignment_24dp"
            android:title="@string/adoption"/>
        <item
            android:id="@+id/nav_donation"
            android:icon="@drawable/ic_shopping_basket_24dp"
            android:title="@string/donation"/>
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_menu_manage"
            android:title="Tools"/>
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share"/>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send"/>
        </menu>
    </item>

</menu>
