<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="shelter" type="eugene.petsshelter.data.models.Shelter"/>
        <variable name="handler" type="eugene.petsshelter.ui.adapter.ButtonClickHandler"/>
    </data>


    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/scroll_donation"
        style="@style/FullScreenView">

        <ScrollView style="@style/FullScreenView"
            android:fillViewport="true">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/content_container"
                style="@style/FullScreenView"
                app:fieldVisibility="@{shelter.title}">


                <TextView
                    android:id="@+id/shelter_title_detail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/screen_edge_standard_margin"
                    android:layout_marginStart="@dimen/screen_edge_standard_margin"
                    android:layout_marginTop="@dimen/screen_edge_standard_margin"
                    android:text="@{shelter.title}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/colorPrimaryDark"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Shelter" />


                <View
                    android:id="@+id/view"
                    style="@style/Divider"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/shelter_title_detail"/>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/address"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view"
                    style="@style/TitlesText"/>

                <TextView
                    android:id="@+id/shelter_address_details"
                    android:layout_width="0dp"
                    android:maxLines="3"
                    tools:text="@string/address"
                    app:layout_constraintBottom_toBottomOf="@+id/textView2"
                    app:layout_constraintEnd_toStartOf="@+id/map_button"
                    app:layout_constraintStart_toEndOf="@+id/textView2"
                    app:layout_constraintTop_toTopOf="@+id/textView2"
                    android:text="@{shelter.geoLocation.address}"
                    style="@style/ShelterDataText"/>

                <TextView
                    android:id="@+id/textView6"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/country"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/shelter_address_details"
                    style="@style/TitlesText"/>

                <TextView
                    android:id="@+id/shelter_country_details"
                    android:layout_width="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@+id/textView6"
                    app:layout_constraintStart_toEndOf="@+id/textView6"
                    app:layout_constraintTop_toTopOf="@+id/textView6"
                    android:text="@{shelter.geoLocation.country}"
                    style="@style/ShelterDataText"/>

                <ImageButton
                    android:id="@+id/map_button"
                    style="@style/ShelterImageButton"
                    android:src="@drawable/ic_map_24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view"
                    android:onClick="@{handler::onButtonClick}"/>

                <View
                    android:id="@+id/view2"
                    style="@style/Divider"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView6"/>

                <TextView
                    android:id="@+id/textView3"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/phone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view2"
                    style="@style/TitlesText"/>

                <TextView
                    android:id="@+id/shelter_phone_details"
                    android:layout_width="0dp"
                    style="@style/ShelterDataText"
                    app:layout_constraintBottom_toBottomOf="@+id/textView3"
                    app:layout_constraintEnd_toStartOf="@+id/web_button"
                    app:layout_constraintStart_toEndOf="@+id/textView3"
                    app:layout_constraintTop_toTopOf="@+id/textView3"
                    android:text="@{shelter.phone}"/>

                <TextView
                    android:id="@+id/textView9"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/web"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView3"
                    style="@style/TitlesText"/>

                <TextView
                    android:id="@+id/shelter_web_details"
                    android:layout_width="0dp"
                    style="@style/ShelterDataText"
                    app:layout_constraintBottom_toBottomOf="@+id/textView9"
                    app:layout_constraintEnd_toStartOf="@+id/web_button"
                    app:layout_constraintStart_toEndOf="@+id/textView9"
                    app:layout_constraintTop_toTopOf="@+id/textView9"
                    android:text="@{shelter.web}"/>

                <TextView
                    android:id="@+id/textView11"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/email"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView9"
                    style="@style/TitlesText"/>

                <TextView
                    android:id="@+id/shelter_email_details"
                    android:layout_width="0dp"
                    style="@style/ShelterDataText"
                    app:layout_constraintBottom_toBottomOf="@+id/textView11"
                    app:layout_constraintEnd_toStartOf="@+id/email_button"
                    app:layout_constraintStart_toEndOf="@+id/textView11"
                    app:layout_constraintTop_toTopOf="@+id/textView11"
                    android:text="@{shelter.email}"/>

                <ImageButton
                    android:id="@+id/web_button"
                    style="@style/ShelterImageButton"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/ic_public_24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view2"/>

                <ImageButton
                    android:id="@+id/email_button"
                    style="@style/ShelterImageButton"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/ic_email_24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/web_button"/>

                <View
                    android:id="@+id/view3"
                    style="@style/Divider"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView11"/>

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/adoption_hours"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view3"/>

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="0dp"
                    style="@style/ShelterDataText"
                    android:layout_marginTop="16dp"
                    android:maxLines="6"
                    app:layout_constraintEnd_toStartOf="@+id/adoption_button"
                    app:layout_constraintStart_toEndOf="@+id/textView8"
                    app:layout_constraintTop_toBottomOf="@+id/view3"
                    android:text="@{shelter.hours}"/>

                <Button
                    android:id="@+id/volunteer_button"
                    style="@style/Button.Standard"
                    android:layout_marginBottom="24dp"
                    android:layout_marginStart="16dp"
                    android:text="@string/become_volunteer"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <Button
                    android:id="@+id/donate_button"
                    style="@style/Button.Standard"
                    android:layout_marginBottom="24dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/donate"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:onClick="@{handler::onButtonClick}"
                    />

                <ImageButton
                    android:id="@+id/adoption_button"
                    android:src="@drawable/ic_assignment_24dp"
                    style="@style/ShelterImageButton"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view3"/>


            </android.support.constraint.ConstraintLayout>
        </ScrollView>

        <ProgressBar
            android:id="@+id/progress_bar"
            style="@style/WrappedView"
            android:layout_gravity="center"
            app:progressBarVisibility="@{shelter.title}"/>

    </android.support.design.widget.CoordinatorLayout>
</layout>